--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ id: home
         </a>
       </div>
       <div class="trusted__block">
-        <a href="https://hulu.com" aria-label="Hulu">
-          <img src="/assets/images/logo-hulu.svg" alt="Hulu" />
+        <a href="https://gusto.com" aria-label="Gusto">
+          <img src="/assets/images/logo-gusto.svg" alt="Gusto" />
         </a>
       </div>
       <div class="trusted__block">
