Add Lime logo to index

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@ id: home
           <img src="/assets/images/logo-fleetio.svg" alt="Fleetio" />
         </a>
       </div>
+      <div class="trusted__block">
+        <a href="https://li.me" aria-label="Lime">
+          <img src="/assets/images/logo-lime.svg" alt="Lime" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
