--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -6,21 +6,167 @@ redirect_from:
   - /docs/
 ---
 
-<div class="heading common-padding--bottom common-padding--top-small">
+<div class="docs heading common-padding--bottom common-padding--top-small">
   <div class="container">
     <div class="heading__body">
       <div class="heading__headline common-headline">
-        <h1>Docs</h1>
-        <h4>A non-profit organization helping our ecosystem prosper.</h4>
+        <h1>
+          Everything
+          <span class="need">you need</span>
+          <span class="build">to get building.</span>
+        </h1>
       </div>
     </div>
   </div>
 </div>
 
-<div class="text common-padding--bottom">
+<div class="docs text common-padding--bottom">
+  <div class="container wide">
+    <div class="text__body">
+      <div class="text__content common-content">
+
+        <h2 class="thin">Get Started</h2>
+        <ul class="learning-cards">
+          <li>
+            <a href="https://guides.rubyonrails.org/getting_started.html#creating-a-new-rails-project-installing-rails" title="Install Ruby on Rails">
+              <img src="/assets/images/docs-banner-installation.svg" alt="Install Ruby on Rails">
+            </a>
+            <h4>Installation</h4>
+            <p>Get Ruby on Rails installed and running properly on your system, whether it be Windows, MacOS, or Linux.</p>
+          </li>
+          <li>
+            <a href="https://guides.rubyonrails.org/getting_started.html#hello-rails-bang" title="The Rails Tutorial">
+              <img src="/assets/images/docs-banner-tutorial.svg" alt="The Rails Tutorial">
+            </a>
+            <h4>Tutorial</h4>
+            <p>From zero to hero, learn the basics of the Ruby on Rails framework and how it enables you to be a better developer.</p>
+          </li>
+          <li>
+            <a href="https://guides.rubyonrails.org/" title="The Ruby on Rails Guides">
+              <img src="/assets/images/docs-banner-guides.svg" alt="The Ruby on Rails Guides">
+            </a>
+            <h4>Guides</h4>
+            <p>The Rails Guides covers all facets of the Rails ecosystem, including the primary gems (libraries) and functionality that is available out of the box.</p>
+          </li>
+        </ul>
+        <br>
+        <h2 class="thin">Dive Deeper</h2>
+        <ul class="learning-cards">
+          <li>
+            <a href="https://api.rubyonrails.org/" title="The API Documentation">
+              <img src="/assets/images/docs-banner-api.svg" alt="API Documentation">
+            </a>
+            <h4>API</h4>
+            <p>The full framework reference, from A to Z for every piece of Rails.</p>
+          </li>
+          <li>
+            <a href=https://discuss.rubyonrails.org/" title="The Rails Forum">
+              <img src="/assets/images/docs-banner-forum.svg" alt="Rails Forum">
+            </a>
+            <h4>Forum</h4>
+            <p>Join the conversation and ask for help on the Rails Forum.</p>
+          </li>
+          <li>
+            <a href="https://github.com/rails/rails" title="Contribute to Rails">
+              <img src="/assets/images/docs-banner-contribute.svg" alt="Contribute to Rails">
+            </a>
+            <h4>Contribute</h4>
+            <p>Rails is open-source, and that means anyone can contribute. Visit Github to see the code & learn more.</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="docs text common-padding--bottom">
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
+        <h2 class="how">How Did They Do It?</h2>
+        <p class="how-leadin">
+          See how some of the most successful online products used
+          Rails to launch, scale, and thrive in a competitive world.
+          Read these case studies to learn more:
+        </p>
+
+        <ul class="case-studies">
+          <li class="case-study">
+            <a href="" title="">
+              <img src="/assets/images/logo-doximity.svg" alt="">
+            </a>
+          </li>
+        </ul>
+
+        <p class="how-leadin">
+          More stories coming soon, but for now here's some of our friends
+          who have used Rails to take their products from zero to enterprise:
+        </p>
+
+        <ul class="use-rails">
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-basecamp.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-hey.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-github.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-shopify.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-instacart.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-dribbble.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-hulu.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-zendesk.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-airbnb.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-square.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-kickstarter.svg" alt="">
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="" title="">
+              <img src="/assets/images/logo-heroku.svg" alt="">
+            </a>
+          </li>
+
+        </ul>
+
 
       </div>
     </div>
