--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -105,63 +105,98 @@ redirect_from:
 
         <ul class="use-rails">
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-basecamp.svg" alt="">
+            <a href="https://basecamp.com" aria-label="Basecamp">
+              <img src="/assets/images/logo-basecamp.svg" alt="Basecamp" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-hey.svg" alt="">
+            <a href="https://hey.com" aria-label="HEY">
+              <img src="/assets/images/logo-hey.svg" alt="HEY" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-github.svg" alt="">
+            <a href="https://github.com" aria-label="GitHub">
+              <img src="/assets/images/logo-github.svg" alt="GitHub" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-shopify.svg" alt="">
+            <a href="https://shopify.com" aria-label="Shopify">
+              <img src="/assets/images/logo-shopify.svg" alt="Shopify" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-instacart.svg" alt="">
+            <a href="https://instacart.com" aria-label="Instacart">
+              <img src="/assets/images/logo-instacart.svg" alt="Instacart" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-dribbble.svg" alt="">
+            <a href="https://dribbble.com" aria-label="Dribbble">
+              <img src="/assets/images/logo-dribbble.svg" alt="Dribbble" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-hulu.svg" alt="">
+            <a href="https://gusto.com" aria-label="Gusto">
+              <img src="/assets/images/logo-gusto.svg" alt="Gusto" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-zendesk.svg" alt="">
+            <a href="https://zendesk.com" aria-label="Zendesk">
+              <img src="/assets/images/logo-zendesk.svg" alt="Zendesk" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-airbnb.svg" alt="">
+            <a href="https://airbnb.com" aria-label="Airbnb">
+              <img src="/assets/images/logo-airbnb.svg" alt="Airbnb" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-square.svg" alt="">
+            <a href="https://squareup.com" aria-label="Square">
+              <img src="/assets/images/logo-square.svg" alt="Square" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-kickstarter.svg" alt="">
+            <a href="https://kickstarter.com" aria-label="Kickstarter">
+              <img src="/assets/images/logo-kickstarter.svg" alt="Kickstarter" />
             </a>
           </li>
           <li class="use-rails__item">
-            <a href="" title="">
-              <img src="/assets/images/logo-heroku.svg" alt="">
+            <a href="https://heroku.com" aria-label="Heroku">
+              <img src="/assets/images/logo-heroku.svg" alt="Heroku" />
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="https://coinbase.com" aria-label="Coinbase">
+              <img src="/assets/images/logo-coinbase.svg" alt="Coinbase" />
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="https://soundcloud.com" aria-label="Soundcloud">
+              <img src="/assets/images/logo-soundcloud.svg" alt="Soundcloud" />
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="https://cookpad.com" aria-label="Cookpad">
+              <img src="/assets/images/logo-cookpad.svg" alt="Cookpad" />
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="https://www.doximity.com" aria-label="Doximity">
+              <img src="/assets/images/logo-doximity.svg" alt="Doximity" />
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="https://www.intercom.com" aria-label="Intercom">
+              <img src="/assets/images/logo-intercom.svg" alt="Intercom" />
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="https://www.fleetio.com" aria-label="Fleetio">
+              <img src="/assets/images/logo-fleetio.svg" alt="Fleetio" />
+            </a>
+          </li>
+          <li class="use-rails__item">
+            <a href="https://li.me" aria-label="Lime">
+              <img src="/assets/images/logo-lime.svg" alt="Lime" />
             </a>
           </li>
 
