Adding coming soon banner over case study card

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -92,9 +92,8 @@ redirect_from:
 
         <ul class="case-studies">
           <li class="case-study">
-            <a href="" title="">
-              <img src="/assets/images/logo-doximity.svg" alt="">
-            </a>
+            <div class="corner-ribbon">Coming Soon!</div>
+              <img src="/assets/images/logo-doximity.svg" alt="Doximity"s>
           </li>
         </ul>
 
