Grammar, spelling, and misc fixes from @robin850

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -32,7 +32,7 @@ redirect_from:
               <img src="/assets/images/docs-banner-installation.svg" alt="Install Ruby on Rails">
             </a>
             <h4>Installation</h4>
-            <p>Get Ruby on Rails installed and running properly on your system, whether it be Windows, MacOS, or Linux.</p>
+            <p>Get Ruby on Rails installed and running properly on your system, whether it be Windows, macOS, or Linux.</p>
           </li>
           <li>
             <a href="https://guides.rubyonrails.org/getting_started.html#hello-rails-bang" title="The Rails Tutorial">
@@ -46,7 +46,7 @@ redirect_from:
               <img src="/assets/images/docs-banner-guides.svg" alt="The Ruby on Rails Guides">
             </a>
             <h4>Guides</h4>
-            <p>The Rails Guides covers all facets of the Rails ecosystem, including the primary gems (libraries) and functionality that is available out of the box.</p>
+            <p>The Rails Guides cover all facets of the Rails ecosystem, including the primary gems (libraries) and functionalities that are available out of the box.</p>
           </li>
         </ul>
         <br>
@@ -60,7 +60,7 @@ redirect_from:
             <p>The full framework reference, from A to Z for every piece of Rails.</p>
           </li>
           <li>
-            <a href=https://discuss.rubyonrails.org/" title="The Rails Forum">
+            <a href="https://discuss.rubyonrails.org/" title="The Rails Forum">
               <img src="/assets/images/docs-banner-forum.svg" alt="Rails Forum">
             </a>
             <h4>Forum</h4>
@@ -71,7 +71,7 @@ redirect_from:
               <img src="/assets/images/docs-banner-contribute.svg" alt="Contribute to Rails">
             </a>
             <h4>Contribute</h4>
-            <p>Rails is open-source, and that means anyone can contribute. Visit Github to see the code & learn more.</p>
+            <p>Rails is open-source, and that means anyone can contribute. Visit GitHub to see the code & learn more.</p>
           </li>
         </ul>
       </div>
@@ -93,7 +93,7 @@ redirect_from:
         <ul class="case-studies">
           <li class="case-study">
             <div class="corner-ribbon">Coming Soon!</div>
-              <img src="/assets/images/logo-doximity.svg" alt="Doximity"s>
+              <img src="/assets/images/logo-doximity.svg" alt="Doximity">
           </li>
         </ul>
 
