Home page improvement for vertical

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -11,9 +11,7 @@ redirect_from:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>
-          Everything
-          <span class="need">you need</span>
-          <span class="build">to get building.</span>
+          Everything you need<br> to get building.
         </h1>
       </div>
     </div>
@@ -27,50 +25,50 @@ redirect_from:
 
         <h2 class="thin">Get Started</h2>
         <ul class="learning-cards">
-          <li>
+          <li id="install">
             <a href="https://guides.rubyonrails.org/getting_started.html#creating-a-new-rails-project-installing-rails" title="Install Ruby on Rails">
               <img src="/assets/images/docs-banner-installation.svg" alt="Install Ruby on Rails">
             </a>
-            <h4>Installation</h4>
+            <h4><a href="https://guides.rubyonrails.org/getting_started.html#creating-a-new-rails-project-installing-rails" title="Install Ruby on Rails">Installation</a></h4>
             <p>Get Ruby on Rails installed and running properly on your system, whether it be Windows, macOS, or Linux.</p>
           </li>
-          <li>
+          <li id="tutorial">
             <a href="https://guides.rubyonrails.org/getting_started.html#hello-rails-bang" title="The Rails Tutorial">
               <img src="/assets/images/docs-banner-tutorial.svg" alt="The Rails Tutorial">
             </a>
-            <h4>Tutorial</h4>
+            <h4><a href="https://guides.rubyonrails.org/getting_started.html#hello-rails-bang" title="The Rails Tutorial">Tutorial</a></h4>
             <p>From zero to hero, learn the basics of the Ruby on Rails framework and how it enables you to be a better developer.</p>
           </li>
-          <li>
+          <li id="guides">
             <a href="https://guides.rubyonrails.org/" title="The Ruby on Rails Guides">
               <img src="/assets/images/docs-banner-guides.svg" alt="The Ruby on Rails Guides">
             </a>
-            <h4>Guides</h4>
+            <h4><a href="https://guides.rubyonrails.org/" title="The Ruby on Rails Guides">Guides</a></h4>
             <p>The Rails Guides cover all facets of the Rails ecosystem, including the primary gems (libraries) and functionalities that are available out of the box.</p>
           </li>
         </ul>
         <br>
         <h2 class="thin">Dive Deeper</h2>
         <ul class="learning-cards">
-          <li>
+          <li id="api">
             <a href="https://api.rubyonrails.org/" title="The API Documentation">
               <img src="/assets/images/docs-banner-api.svg" alt="API Documentation">
             </a>
-            <h4>API</h4>
+            <h4><a href="https://api.rubyonrails.org/" title="The API Documentation">API</a></h4>
             <p>The full framework reference, from A to Z for every piece of Rails.</p>
           </li>
-          <li>
+          <li id="forum">
             <a href="https://discuss.rubyonrails.org/" title="The Rails Forum">
               <img src="/assets/images/docs-banner-forum.svg" alt="Rails Forum">
             </a>
-            <h4>Forum</h4>
+            <h4><a href="https://discuss.rubyonrails.org/" title="The Rails Forum">Forum</a></h4>
             <p>Join the conversation and ask for help on the Rails Forum.</p>
           </li>
-          <li>
+          <li id="contribute">
             <a href="https://github.com/rails/rails" title="Contribute to Rails">
               <img src="/assets/images/docs-banner-contribute.svg" alt="Contribute to Rails">
             </a>
-            <h4>Contribute</h4>
+            <h4><a href="https://github.com/rails/rails" title="Contribute to Rails">Contribute</a></h4>
             <p>Rails is open-source, and that means anyone can contribute. Visit GitHub to see the code & learn more.</p>
           </li>
         </ul>
