Video src value updated

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ id: home
   <div class="container">
     <div class="video__embed">
       <video poster="/assets/videos/rails7-screencast-poster.jpg" width="1920" height="1080" controls>
-        <source src="https://d1snj8sshb5u7m.cloudfront.net/Rails7.mp4" type="video/mp4">
+        <source src="https://d2biiyjlsh52uh.cloudfront.net/rails/rails.mp4" type="video/mp4">
         <track kind="captions" label="English" src="/assets/videos/rails7-screencast-english.vtt" srclang="en" default="false">
       </video>
     </div>
