--- a/doctrine/de.html
+++ b/doctrine/de.html
@@ -45,6 +45,9 @@ redirect_from:
               <a href="/doctrine/ru"><span>Russian</span></a>
             </li>
             <li>
+              <a href="/doctrine/uk"><span>Українська</span></a>
+            </li>
+            <li>
               <a href="/doctrine/zh_cn"><span>简体中文</span></a>
             </li>
             <li>
