--- a/doctrine/uk.html
+++ b/doctrine/uk.html
@@ -42,19 +42,19 @@ redirect_from:
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
-        <p>Феноменальний ріст Ruby on Rails у популярності завдячує переважно новаторстві технологій та вдалому моменту. Проте, технологічні перевали стираються під плином часу, а вдалий момент не може втримувати рух самостійно у довгій перспективі.не може довго втримати рух самостійно. Тому необхідне ширше пояснення як Rails продовжує не лише залашатись актуальним, але й розширяти свій вплив та спільноту. Я пропоную, що постійним рушієм була і залишається його суперечлива доктрина.</p>
+        <p>Феноменальний ріст Ruby on Rails у популярності завдячує переважно новаторству технологій та вдалому моменту. Проте, технологічні перевали стираються з плином часу, а вдалий момент не може сам довго тримати рух. Тому необхідне ширше пояснення як Rails продовжує не лише залашатись актуальним, але й розширяти свій вплив та спільноту. Я пропоную, що постійним рушієм була і залишається його суперечлива доктрина.</p>
         <p>Ця доктрина сильно розвинулась протягом минулого десятиліття, але більшість її найміцніших стовпів досі є в основі. Я не претендую на принципову оригінальність цих ідей. Ключовим досягненням Rails було об'єднати і виплекати міцну спільноту навколо широкого кола єресливих думок про природу програмування та програмістів.</p>
-        <p>З таким галасом, ось 9 найважливіших стержнів Rails Доктрини, як їх сприймає щиро Ваш:</p>
+        <p>З таким галасом, ось 9 найважливіших стержнів Rails Доктрини, як їх бачить щиро Ваш:</p>
         <ol>
-          <li><a href="#optimize-for-programmer-happiness">Оптимізація задля щастя програмістів</a></li>
+          <li><a href="#optimize-for-programmer-happiness">Оптимізуйте на щастя програмістів</a></li>
           <li><a href="#convention-over-configuration">Погодженість замість конфігурації</a></li>
-          <li><a href="#omakase">Меню є омакасе</a></li>
+          <li><a href="#omakase">Меню це омакасе</a></li>
           <li><a href="#no-one-paradigm">Нічия парадигма</a></li>
           <li><a href="#beautiful-code">Звеличуйте гарний код</a></li>
-          <li><a href="#provide-sharp-knives">Provide sharp knives</a></li>
-          <li><a href="#integrated-systems">Value integrated systems</a></li>
-          <li><a href="#progress-over-stability">Progress over stability</a></li>
-          <li><a href="#big-tent">Push up a big tent</a></li>
+          <li><a href="#provide-sharp-knives">Потрібні гості ножі</a></li>
+          <li><a href="#integrated-systems">Цінуйте цілісні системи</a></li>
+          <li><a href="#progress-over-stability">Прогрес понад стабільність</a></li>
+          <li><a href="#big-tent">Посуньте великий намет</a></li>
         </ol>
       </div>
     </div>
@@ -65,11 +65,11 @@ redirect_from:
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
-        <h3>Optimize for programmer happiness</h3>
-        <p>There would be no Rails without Ruby, so it’s only fitting that the first doctrinal pillar is lifted straight from the core motivation for creating Ruby.</p>
-        <p>Ruby’s original heresy was indeed to place the happiness of the programmer on a pedestal. Above many other competing and valid concerns that had driven programming languages and ecosystems before it.</p>
-        <p>Where Python might boast that there’s “one and preferably only one way to do something”, Ruby relished expressiveness and subtlety. Where Java championed forcefully protecting programmers from themselves, Ruby included a set of sharp knives in the welcome kit. Where Smalltalk drilled a purity of message passing, Ruby accumulated keywords and constructs with an almost gluttonous appetite.</p>
-        <p>Ruby was different because it valued different things. And most of those things were in service of this yearning for programmer happiness. A pursuit that brought it at odds with not only most other programming environments, but also the mainstream perception of what a programmer was and how they were supposed to act.</p>
+        <h3>Оптимізуйте на щастя програмістів</h3>
+        <p>Не було б Rails без Ruby, тому доцільно що перший стовп доктрини взято з корінної мотивації створення Ruby.</p>
+        <p>Початкова єресь Ruby була саме в тому щоб поставити радість програміста на п'єдестал. Понад багатьма конкуруючими та вагомими клопотами, які раніше впливали на мови програмування та екосистеми.</p>
+        <p>Там, де Python міг похвалитися що є “один і бажано лише один спосіб щось зробити”, Ruby задовільнився вираженістю та витонченістю. Коли Java відстоювала примусовий захист програмістів від самих себе, Ruby включив комплект гострих ножів ще у вітальному наборі. Поки Smalltalk просвердлював чистоту обміну повідомленнями, Ruby здобув ключові слова та конструкти з жадібним апетитом.</p>
+        <p>Ruby був іншим бо цінував інші речі. І більшість з цих речей були  And most of those things were in service of this yearning for programmer happiness. A pursuit that brought it at odds with not only most other programming environments, but also the mainstream perception of what a programmer was and how they were supposed to act.</p>
         <p>Ruby took to not only recognize but accommodate and elevate programmer feelings. Whether they be of inadequacy, whimsy, or joy. Matz jumped implementational hurdles of astounding complexity to make the machine appear to smile at and flatter its human co-conspirator. Ruby is full of optical illusions where that which seems simple, clear, and beautiful to our mind’s eye actually is an acrobatic mess of wires under the hood. These choices were not free (ask the JRuby crew about trying to reverse-engineer this magical music box!), which is precisely why they’re so commendable.</p>
         <p>It was this dedication to an alternate vision for programming and programmers that sealed my love affair with Ruby. It wasn’t just ease of use, it wasn’t just aesthetics of blocks, it was no one single technical achievement. It was a vision. A counter culture. A place for the misfits of the existing professional programming mold to belong and associate with the like of mind.</p>
         <p>I’ve described this discovery of Ruby in the past as finding a magical glove that just fit my brain perfectly. Better than I had ever imagined any glove could ever fit. But it was even more than that. It was the event that marked my own personal transition from ‘doing programming because I needed programs’ to ‘doing programming because I fell in love with it as a mode of intellectual exercise and expression’. It was finding a <a href="http://www.amazon.com/Flow-Harper-Perennial-Modern-Classics-ebook/dp/B000W94FE6/">fountain of flow</a> and being able to turn it on at will. For anyone familiar with Csikszentmihalyi’s work, the impact of this is hard to overstate.</p>
