--- a/doctrine/de.html
+++ b/doctrine/de.html
@@ -45,7 +45,7 @@ redirect_from:
               <a href="/doctrine/ru"><span>Russian</span></a>
             </li>
             <li>
-              <a href="/doctrine/uk"><span>Українська</span></a>
+              <a href="/doctrine/uk"><span>Ukrainian</span></a>
             </li>
             <li>
               <a href="/doctrine/zh_cn"><span>简体中文</span></a>
