--- a/doctrine/es.html
+++ b/doctrine/es.html
@@ -27,7 +27,7 @@ redirect_from:
             <li><a href="/doctrine"><span>English</span></a></li>
             <li><a href="/doctrine/fr"><span>Français</span></a></li>
             <li><a href="/doctrine/ru"><span>Russian</span></a></li>
-            <li><a href="/doctrine/uk"><span>Українська</span></a></li>
+            <li><a href="/doctrine/uk"><span>Ukrainian</span></a></li>
             <li><a href="/doctrine/zh_cn"><span>简体中文</span></a></li>
             <li><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
           </ul>
