--- a/doctrine/zh_cn.html
+++ b/doctrine/zh_cn.html
@@ -28,7 +28,7 @@ redirect_from:
             <li><a href="/doctrine/es"><span>Español</span></a></li>
             <li><a href="/doctrine/fr"><span>Français</span></a></li>
             <li><a href="/doctrine/ru"><span>Russian</span></a></li>
-            <li><a href="/doctrine/uk"><span>Українська</span></a></li>
+            <li><a href="/doctrine/uk"><span>Ukrainian</span></a></li>
             <li><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
           </ul>
         </div>
